--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+ENTRA_ID_CLIENT_ID=""
+ENTRA_ID_CLIENT_SECRET=""
