--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^19.0.0",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
